--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -61,8 +61,8 @@ body {
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.145 0 0);
+  --popover: rgb(236, 235, 228);
+  --popover-foreground: #4e2a05;
   --primary: #4e2a05;
   --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(0.97 0 0);
